src/tests/snapshots/gitu__tests__checkout__checkout_menu.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main                                                                         |
   other-branch                                                                 |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Branch                                                                          |
b Checkout branch/revision                                                      |
c Checkout new branch                                                           |
d Delete branch                                                                 |
q/<esc> Quit/Close                                                              |
styles_hash: d05cb29e19813b7b
