src/tests/snapshots/gitu__tests__checkout__checkout_new_branch.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
▌On branch x                                                                    |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main x origin/main add initial-file                                    |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout -b x                                                             |
Switched to a new branch 'x'                                                    |
styles_hash: daabd53dfc068e06
