src/tests/snapshots/gitu__tests__checkout__delete_branch_menu.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Branch                                                                          |
b Checkout branch/revision                                                      |
c Checkout new branch                                                           |
K Delete branch                                                                 |
q/<esc> Quit/Close                                                              |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d branch-to-delete                                                |
Deleted branch branch-to-delete (was b66a0bf).                                  |
styles_hash: 69d8529a0fb4ebef
