src/tests/snapshots/gitu__tests__checkout__delete_current_branch_error.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Branch                                                                          |
b Checkout branch/revision                                                      |
c Checkout new branch                                                           |
K Delete branch                                                                 |
q/<esc> Quit/Close                                                              |
────────────────────────────────────────────────────────────────────────────────|
! Cannot delete the current branch                                              |
styles_hash: e8a394cbb6cccb26
