src/tests/snapshots/gitu__tests__checkout__switch_branch_input.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * hi                                                                           |
▌  main                                                                         |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout hi                                                               |
Switched to branch 'hi'                                                         |
styles_hash: 480e59d5b4c28364
