src/tests/snapshots/gitu__tests__checkout__switch_branch_selected.snap
---
source: src/tests/mod.rs
expression: ctx.redact_buffer()
---
 Branches                                                                       |
   main                                                                         |
▌* other-branch                                                                 |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout other-branch                                                     |
Switched to branch 'other-branch'                                               |
styles_hash: 5006bae7555ab9c9
